--- a/bot/package.json
+++ b/bot/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "node-cron": "^4.0.6",
     "nodemailer": "^8.0.1",
+    "proper-lockfile": "^4.1.2",
     "ws": "^8.19.0"
   }
 }
